preliminary fix for bug #73971, more refactoring is needed